# bloogger

./: .gitignore  Cargo.toml
src/: cache.rs  channel.rs  colors.rs  command.rs  config.rs  data.rs  event.rs  handler.rs  lib.rs  main.rs  messages.rs  texts.rs
src/cache/: error.rs
src/data/: error.rs
src/event/: guild_member_addition.rs  guild_member_removal.rs  message_delete.rs  message_update.rs
src/utils/: text.rs
